# 3d_localization

icp_localizer/: CMakeLists.txt
icp_localizer/nodes/icp_matching/: icp_matching.cpp
localization_msgs/: CMakeLists.txt  package.xml
localization_node/: CMakeLists.txt  package.xml
localization_node/config/: mia.urdf  views.rviz
localization_node/launch/: bag_player.launch  map_downloader.launch  ndt_mapping.launch  ndt_matching.launch  pcd_publisher.launch  start_all.launch  tf.launch  tf_localizer.launch
map_file/: CMakeLists.txt  package.xml
map_file/lib/map_file/: get_file.cpp
map_file/nodes/points_map_loader/: points_map_loader.cpp
ndt_localizer/: CMakeLists.txt  package.xml
ndt_localizer/include/: ndt_mapping.hh  ndt_matching.hh
ndt_localizer/launch/: #ndt_mapping.launch#  bag_player.launch  ndt_mapping.launch  ndt_matching.launch  pcd_publisher.launch  points_downsample.launch  start_all.launch  tf.launch  tf_localizer.launch
ndt_localizer/nodes/ndt_mapping/: ndt_mapping.cc  ndt_mapping.cpp  ndt_mapping_node.cpp
ndt_localizer/nodes/ndt_matching/: ndt_matching.cpp  ndt_matching_node.cpp
ndt_localizer/nodes/queue_counter/: queue_counter.cpp
ndt_localizer/nodes/voxel_grid_filter/: voxel_grid_filter.cpp
nodes/: CMakeLists.txt  package.xml
nodes/config/: localization.rviz  mia.stl  mia.urdf  mia_ndt.urdf
nodes/launch/: bag_player.launch  dual_ekf_navsat_example.launch  ekf.launch  ekf_template.launch  ekf_wheel_imu.launch  ekf_wheel_imu_ndt.launch  fix2tfpose.launch  gmapping.launch  gps2pose.launch  icp_matching.launch  kill_node.sh  laser_odometry.launch  localization.sh  map_publisher.launch  navsat_transform_template.launch  ndt_dnm.launch  ndt_mapping.launch  ndt_matching.launch  odometry.launch  rviz.sh  rviz.sh~  state_publisher.launch  tf_localizer.launch  tf_mapping.launch  tf_world_map.launch  voxel_filter.launch
nodes/param/: dual_ekf_navsat_example.yaml  ekf_template.yaml  ekf_wheel_imu.yaml  ekf_wheel_imu_ndt.yaml  gps2pose.yaml  icp_match_param.yaml  navsat_transform_template.yaml  ndt_map_param.yaml  ndt_match_param.yaml
points_downsampler/: CMakeLists.txt  package.xml
points_downsampler/cfg/: DynCfgVoxel.cfg
points_downsampler/nodes/voxel_grid_filter/: voxel_grid_filter.cpp
(+1 files in other folders)
